Create user and trip model and setup mongo configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=road-trip-planner
+spring.data.mongodb.uri=mongodb://localhost:27017/travel-trip-planner
+spring.datasource.driver-class-name=
+server.port=8080
+
+# Index Creation
+spring.data.mongodb.auto-index-creation=true
+
+logging.level.org.springframework.data.mongodb.core=DEBUG
+
+app.jwt.secret=traveltripplanner
+app.jwt.expiration=86400000
