feat: Add user retrieval and API documentation
Adds user retrieval by email and configures OpenAPI for API documentation.
Includes exception handling and security configuration updates.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,7 @@ spring.data.mongodb.auto-index-creation=true
 
 logging.level.org.springframework.data.mongodb.core=DEBUG
 
-app.jwt.secret=traveltripplanner
+app.jwt.secret=v9y$B&E)H@MbQeThWmZq4t7w!z%C*F-JaNdRfUjXn2r5u8x/A?D(G+KbPeShVkYp
 app.jwt.expiration=86400000
+# Add to application.properties
+logging.level.org.springframework.security=DEBUG
