feat: Enable Swagger UI and update dependencies
This commit enables Swagger UI for API documentation and updates project dependencies, including Spring Boot version and other libraries. Also, adds SpringDocConfig.java

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,18 @@ app.jwt.secret=v9y$B&E)H@MbQeThWmZq4t7w!z%C*F-JaNdRfUjXn2r5u8x/A?D(G+KbPeShVkYp
 app.jwt.expiration=86400000
 # Add to application.properties
 logging.level.org.springframework.security=DEBUG
+logging.level.org.springdoc=TRACE
+logging.level.org.springframework.web=DEBUG
+
+# Explicitly set the paths for Swagger UI
+springdoc.api-docs.path=/v3/api-docs
+springdoc.webjars.prefix=/webjars
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
+
+# Make sure these are explicitly enabled
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+
+# Configure URL to load the API docs
+springdoc.swagger-ui.url=/v3/api-docs
